<fixed bug on mobile menu relating to border not hiding before translation>

--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ a:visited {
   display: flex;
   position: absolute;
   left: 25vw;
-  top: -33vh;
+  top: -33.5vh;
   width: 55vw;
   height: 33vh;
   align-items: center;
@@ -283,7 +283,7 @@ a:visited {
 
   /*how on earth do you get this to work both ways -_- */
   /* animation-name: mobileMenuDrop; */
-  transition: transform ease-in-out 1s;
+  transition: transform ease-out 1s;
 }
 
 .mobile_menu {
@@ -298,7 +298,6 @@ a:visited {
       var(--color-secondary) 70%
     )
     30;
-  transition: transform 1s;
 }
 
 .mobile_nav_btn {
@@ -307,7 +306,7 @@ a:visited {
   align-items: center;
   width: 100%;
   height: 100%;
-  font-size: 1em;
+  font-size: 1.3em;
   background: var(--color-glass-transparancy);
   cursor: pointer;
   transition: ease-in-out 500ms;
@@ -958,6 +957,14 @@ iframe {
   line-height: 1em;
   font-family: "Poppins", sans-serif;
   font-weight: 300;
+  padding-bottom: 10px;
+  border-bottom: 5px solid;
+  border-image: linear-gradient(
+      120deg,
+      var(--color-primary) 30%,
+      var(--color-secondary) 70%
+    )
+    30;
 }
 
 .video_description p {
